Added Permute layer and a new preset.

--- a/quickstart.html
+++ b/quickstart.html
@@ -50,6 +50,10 @@
             <a href="./#/preset/vgg-16">VGG 16 Layers</a>
             <div class="authors">Karen Simonyan, Andrew Zisserman</div>
         </div>
+        <div class="preset">
+            <a href="./#/preset/mobilenet-ssd">MobileNet-SSD</a>
+            <div class="authors">chuanqi305</div>
+        </div>
     </div>
 </body>
 </html>
