--- a/quickstart.html
+++ b/quickstart.html
@@ -52,7 +52,7 @@
         </div>
         <div class="preset">
             <a href="./#/preset/mobilenet-ssd">MobileNet-SSD</a>
-            <div class="authors">chuanqi305</div>
+            <div class="authors"><a href="https://github.com/chuanqi305/MobileNet-SSD">chuanqi305</a></div>
         </div>
     </div>
 </body>
