--- a/quickstart.html
+++ b/quickstart.html
@@ -54,6 +54,10 @@
             <a href="./#/preset/mobilenet-ssd">MobileNet-SSD</a>
             <div class="authors"><a href="https://github.com/chuanqi305/MobileNet-SSD">chuanqi305</a></div>
         </div>
+        <div class="preset">
+            <a href="./#/preset/resnet-152">ResNet 152 Layers</a>
+            <div class="authors">Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun</div>
+        </div>
     </div>
 </body>
 </html>
