Added SegNet into presets.

--- a/quickstart.html
+++ b/quickstart.html
@@ -58,6 +58,10 @@
             <a href="./#/preset/resnet-152">ResNet 152 Layers</a>
             <div class="authors">Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun</div>
         </div>
+        <div class="preset">
+            <a href="./#/preset/segnet">SegNet</a>
+            <div class="authors">Alex Kendall, Vijay Badrinarayanan, Roberto Cipolla</div>
+        </div>
     </div>
 </body>
 </html>
