Added MobileNet V2 into presets.

--- a/quickstart.html
+++ b/quickstart.html
@@ -62,6 +62,10 @@
             <a href="./#/preset/segnet">SegNet</a>
             <div class="authors">Alex Kendall, Vijay Badrinarayanan, Roberto Cipolla</div>
         </div>
+        <div class="preset">
+            <a href="./#/preset/mobilenet-v2">MobileNet V2</a>
+            <div class="authors">Mark Sandler, Andrew Howard, Menglong Zhu, Andrey Zhmoginov, Liang-Chieh Chen</div>
+        </div>
     </div>
 </body>
 </html>
