Added Mask R-CNN into presets.

--- a/quickstart.html
+++ b/quickstart.html
@@ -66,6 +66,11 @@
             <a href="./#/preset/mobilenet-v2">MobileNet V2</a>
             <div class="authors">Mark Sandler, Andrew Howard, Menglong Zhu, Andrey Zhmoginov, Liang-Chieh Chen</div>
         </div>
+        <div class="preset">
+            <a href="./#/preset/mask_rcnn_backbone">Mask R-CNN (backbone&mask)</a> and 
+            <a href="./#/preset/mask_rcnn_rpn">Mask R-CNN (RPN)</a>
+            <div class="authors"><a href="https://github.com/jasjeetIM/Mask-RCNN">jasjeetIM</a></div>
+        </div>
     </div>
 </body>
 </html>
